# api/app/Http/Requests/Parties/ListPartiesRequest.php
@@ -1,0 +1,8 @@
+<?php
+
+namespace App\Http\Requests\Parties;
+
+use App\Http\Requests\Users\ListRequest;
+
+/** `page` and `per_page` of docs/api/parties/GET-elections-{election}-parties.md. */
+class ListPartiesRequest extends ListRequest {}
